deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: admission-image-controller
  name: admission-image-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admission-image-controller
  strategy: {}
  template:
    metadata:
      labels:
        app: admission-image-controller
    spec:
      containers:
        - image: admission-image-controller:2
          name: admission-image-controller
          ports:
            - containerPort: 443
          imagePullPolicy: Never
          volumeMounts:
            - mountPath: /app/certs
              name: certs
              readOnly: true
      volumes:
        - name: certs
          secret:
            secretName: root-secret
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: admission-image-controller
  name: admission-image-controller
spec:
  ports:
    - port: 443
      protocol: TCP
      targetPort: 443
  selector:
    app: admission-image-controller
status:
  loadBalancer: {}
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mutating-webhook
  namespace: default
  labels:
    component: mutating-controller
  annotations:
    cert-manager.io/inject-ca-from: default/mutating-replicant
webhooks:
  - name: admission-image-controller.default.svc
    failurePolicy: Fail
    sideEffects: None
    admissionReviewVersions: ["v1"]
    clientConfig:
      service:
        name: admission-image-controller
        namespace: default
        path: /mutate/deployments
      # caBundle: <redacted> # a base64 encoded self signed ca cert is needed because all Admission Webhooks need to be on SSL
    rules:
      - apiGroups: ["apps"]
        resources:
          - "deployments"
        apiVersions:
          - "*"
        operations:
          - CREATE
          - UPDATE
